assets/css/style.css
/* ... */
#sign_up_foreground_square {
    width: 20%;
    height: 90%;
    background-color: white;
    float: left;

    display: flex;
    justify-content: center;
    flex-flow: wrap;
}

#signup_border {
    border: 2px dashed #808000;
    margin-top: 1.3%;
    margin-right: 1%;
    height:100%;

    display: flex;
    justify-content: center;
    flex-flow: wrap;

    box-sizing: border-box;
}

#square_border {
  width: 350px;
}

#sign_up_img {
    background: url('../images/afternoon6.jpeg') no-repeat center center;
    height: 100%;
    background-size: cover;
    margin-top: 5%;

    border: 2px dashed #808000;
    box-sizing: border-box;
}

#sign_up_heading {
    padding-top: 3%;
}

#sign_up_heading h2 {
    font-size: 200%;
    text-align: center;
}

#sign_up_text {
    width: 80%;
}

#sign_up_text p {
    font-size: 120%;
    text-align: center;
}

#email_signup input {
    border: 1px solid #080808;
    border-radius: 3px;
    padding: 5px;
    background-color: white;

    font-size: 150%;
    font-family: Mate SC, sans-serif;
    text-align: center;
} 

#email {
    width: 90%;
    margin-left: 4%;
}

#submit {
    width: 30%;
    margin-left: 35%;
    margin-top: 5%;
}

#submit:hover {
    background-color: #C7BF94;
    cursor: pointer;
}

/* Footer */

#background_footer {
    background-color: #F2EDD7;
    width: 100%;
    height: 50px;
}

#footer_media {
    width: 20%;
    margin-top: 0.5%;
    float: right;
}

#footer_media li {
    display: inline-block;
}

#quote_strip_footer {
    background-color: #C7BF94;
    width: 100%;
    height:40px;

    padding-top: 5px;
}

#footer_media i {
    font-size: 200%;
    color: #080808;
    letter-spacing: 30px;
}

.contact_us {
    display: inline-block;
    padding-left: 150px;
    padding-top: 5px;
    font-size: 150%;
}

/* Menu */

#menu_background {
    background-color: #C7BF94;
    width: 100%;
    height: 1810px;
}

#menu_forground {
    background-color: #F2EDD7;
    width: 100%;
    height: 1800px;
    margin: 0 auto;
}

#menu_header {
    text-align: center;
    padding-top: 1%;
}

#menu_header h2 {
    font-size: 220%;
}

#menu_header p {
    font-size: 180%;
    color: #808000;
    padding-top: 1%;
}

#classic_afternoon_tea {
    background-color: white;
    border: 2px dashed #808000;
    width: 80%;
    height: 25%;
    margin: 1% auto;
}

#premium_afternoon_tea {
    background-color: white;
    border: 2px dashed #808000;
    width: 80%;
    height: 35%;
    margin: 1% auto;
}

#extra_afternoon_tea {
    background-color: white;
    border: 2px dashed #808000;
    width: 80%;
    height: 14%;
    margin: 1% auto;
}

.menu p{
    text-align: center;
    font-size: 150%;
}

.menu h2 {
    text-align: center;
    font-size: 150%;
}

.menu h3 {
    text-align: center;
    font-size: 150%;
}

.price {
    color: #808000;
    font-style: italic;
}

.menu h2::before {
    content: "\A";
    white-space: pre;
}

.menu h3::before {
    content: "\A";
    white-space: pre;
}

#menu_button {
    margin: 3% auto;
    
    padding: 5px;
    width: 30%;
    border: 2px solid #080808;
    border-radius: 6px;

    background-color: white;

    display: flex;
    justify-content: center;
    flex-flow: wrap;

    font-size: 170%;
}

#menu_button a {
    text-decoration: none;
    color: #080808;
}

#menu_button:hover {
    background-color: #C7BF94;
}

#menu_button h2 {
    font-size: 180%;
    float: left;
    text-align: center;
    background-color: white;
    padding:2px;
}

#menu_download {    
    width: 30%;
    border: 2px solid #080808;
    border-radius: 6px;

    padding: 5px;
    margin: 1% auto;

    background-color: white;

    display: flex;
    justify-content: center;
    flex-flow: wrap;

    font-size: 170%;
    text-align: center;
}

#menu_download a {
   text-decoration: none;
   color: #080808;
}

#menu_download h2 {
    font-size: 180%;
    float: left;
    text-align: center;
    background-color: white;
    padding:2px;
}

#menu_download:hover {
    background-color: #C7BF94;
}

/*Recipes*/

#heading_recipes {
    height: 120px;
    width: 100%;
    background-color: #F2EDD7;
}

#heading_recipes {
    text-align: center;
    padding-top: 1%;
}

#heading_recipes h2 {
    font-size: 220%;
}

#heading_recipes p {
    font-size: 180%;
    color: #808000;
    padding-top: 1%;
}

#heading_recipes a {
    text-decoration: none;
    color: #808000;
}

#heading_recipes a:hover {
    border-bottom: 1px solid #808000;
    cursor: pointer;
}

#empty_space {
    height: 50px;
    width: 100%;
    background-color: #F2EDD7;
}
.background_recipes {
    background-color: #F2EDD7;
    width: 100%;
    height: 605px;
}

.recipes {
    height: 100%;
}

.border_recipes {
    width: 33.33%;
    height: 100%;
    box-sizing: border-box;
    float:left;
    overflow: hidden;
    margin:0;

    border: 2px dashed #808000;
    position: relative;
    background-color: white;

    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: space-around;
}

#image1 {
    background: url('../images/selection1.jpeg') no-repeat center center;
    height: 45%;
    width: 45%;
    border-radius: 50%;
    background-size: cover;
    text-align:center;
    padding:0;
}

#image2 {
    background: url('../images/selection2.jpeg') no-repeat center center;
    height: 45%;
    width: 45%;
    border-radius: 50%;
    background-size: cover;
    text-align:center;
    padding:0;
}

#image3 {
    background: url('../images/selection3.jpeg') no-repeat center center;
    height: 45%;
    width: 45%;
    border-radius: 50%;
    background-size: cover;
    text-align:center;
    padding:0;
}

#image4 {
    background: url('../images/selection4.jpeg') no-repeat center center;
    height: 45%;
    width: 45%;
    border-radius: 50%;
    background-size: cover;
    text-align:center;
    padding:0;
}
/* ... */

